make bubbles container overflow-y:hidden, to avoid scrollbar during animation

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,7 @@ body {
     font-weight: 600;
   }
   &__stories {
+    overflow-y: hidden;
     padding: 0 60px;
     & > * {
       margin: 10px 5px 80px;
